--- a/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
+++ b/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
@@ -1,4 +1,5 @@
 @use '@innomotics/ix/styles/colors';
+@use '@innomotics/ix/styles/componentmixins';
 
 :host {
   display: flex;
@@ -19,9 +20,7 @@
       }
 
       &:focus {
-        outline: colors.$blue-focus;
-        outline-style: solid;
-        outline-width: 2px;
+        @include componentmixins.focus;
       }
     }
 
@@ -35,10 +34,7 @@
       }
 
       &:focus {
-        outline: colors.$blue-focus;
-        outline-style: solid;
-        outline-width: 2px;
-        outline-offset: 2px;
+        @include componentmixins.focus;
       }
     }
   }
