--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -2,11 +2,4 @@
 @forward '@innomotics/ix-icons/dist/styles/innomoticsIcons';
 @forward './colors';
 @forward './componentmixins';
-
-body{
-    font-family: 'InnomoticsHafferSQ-Light';
-}
-
-input{
-    font-family: 'InnomoticsHafferSQ-Light';
-}
+@forward './base';
