removing last hardcoded colors

--- a/packages/stencil-lib/src/components/inno-pane/inno-pane.scss
+++ b/packages/stencil-lib/src/components/inno-pane/inno-pane.scss
@@ -1,4 +1,6 @@
+@use '@innomotics/ix/styles/base';
 @use '@innomotics/ix/styles/colors';
+
 
 :host {
   display: block;
@@ -36,7 +38,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: #00000099;
+    background: rgba(colors.$primary-200,.99);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     z-index: 1000;
