--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -181,7 +181,7 @@
       border-radius: 50%;
       padding: 0;
       background-color: colors.$background-light-200;
-      box-shadow: 0px 4px 20px 0px #00000033;
+      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200,0.33);
       color: colors.$primary-200;
 
       &:hover:not(.disabled):not(:disabled) {
@@ -206,7 +206,7 @@
       max-width: 32px;
       padding: 0;
       background-color: colors.$background-light-200;
-      box-shadow: 0px 4px 20px 0px #00000033;
+      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200,0.33);
 
       &:hover:not(.disabled):not(:disabled) {
         color: colors.$interaction-light-default;
