--- a/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
+++ b/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
@@ -18,7 +18,7 @@
   background-color: colors.$gray-900;
   padding: 16px;
 
-  box-shadow: 0px 2px 5px 0px #00000080;
+  box-shadow: 0px 2px 5px 0px rgba(colors.$primary-200,.8);
 
   .tooltip-title {
     display: flex;
