--- a/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
+++ b/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
@@ -6,7 +6,7 @@
   left: 0px;
   top: 0px;
   z-index: 50;
-  color: colors.$primary-white;
+  color: colors.$primary-300;
   font-family: 'InnomoticsHafferSQ-Bold';
   max-width: 18.25rem;
   font-size: 14px;
@@ -15,7 +15,7 @@
   overflow-wrap: break-word;
   width: max-content;
 
-  background-color: colors.$gray-900;
+  background-color: colors.$additional-light-400;
   padding: 16px;
 
   box-shadow: 0px 2px 5px 0px rgba(colors.$primary-200,.8);
@@ -52,6 +52,6 @@
     visibility: visible;
     content: '';
     transform: rotate(45deg);
-    background-color: colors.$gray-900;
+    background-color: colors.$additional-light-400;
   }
 }
