--- a/packages/webdocs/src/css/custom.scss
+++ b/packages/webdocs/src/css/custom.scss
@@ -7,7 +7,7 @@
 
  /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #{innomotics.$primary-yellow};
+  --ifm-color-primary: #{innomotics.$background-light-100};
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
   --ifm-color-primary-darkest: #205d3b;
@@ -20,7 +20,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #{innomotics.$primary-yellow};
+  --ifm-color-primary: #{innomotics.$background-light-100};
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
