--- a/packages/stencil-lib/styles/_colors.scss
+++ b/packages/stencil-lib/styles/_colors.scss
@@ -30,6 +30,8 @@ $internal-100: #ddabff;
 $internal-200: #c263ed;
 $focus-100: #1491eb;
 
+$backdrop: #00000099;
+
 $text-light-highemphasis: $primary-200;
 $text-light-lowemphasis: $secondary-800;
 $text-light-buttonlabel: $primary-300;
