--- a/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
+++ b/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
@@ -7,13 +7,13 @@
   top: 0px;
   z-index: 50;
   color: colors.$primary-300;
-  font-family: 'InnomoticsHafferSQ-Bold';
-  max-width: 18.25rem;
+  font-family: 'InnomoticsHafferSQ-Light';
   font-size: 14px;
   opacity: 0;
   visibility: collapse !important;
   overflow-wrap: break-word;
   width: max-content;
+  max-width: 90vw;
 
   background-color: colors.$additional-light-400;
   padding: 16px;
@@ -23,10 +23,7 @@
   .tooltip-title {
     display: flex;
     align-items: center;
-
-    ::slotted(ix-icon) {
-      margin-right: 0.35rem;
-    }
+    font-weight: bold;
   }
 }
 
@@ -52,6 +49,16 @@
     visibility: visible;
     content: '';
     transform: rotate(45deg);
-    background-color: colors.$additional-light-400;
+    background-color: inherit;
   }
+}
+
+:host(.dark) {
+  color: colors.$primary-300;
+  background-color: colors.$additional-light-400;
+}
+
+:host(.light) {
+  color: colors.$primary-200;
+  background-color: colors.$additional-dark-400;
 }
