Add ix-footer component

--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -1,13 +1,120 @@
-@use '@innomotics/ix/styles/innomotics';
+@use '@innomotics/ix/styles/base';
+@use '@innomotics/ix/styles/colors';
+@use '@innomotics/ix/styles/componentmixins';
 
 :host {
-  height: 120px;
+  padding: 40px 20px 40px 20px;
   display: flex;
-  justify-content: flex-end;
-  background-color: black;
-  font-family: 'InnomoticsHafferSQ-Bold';
+  flex-direction: column;
+  justify-content: flex-start;
+
+  &.light {
+    background-color: colors.$background-light-200;
+  }
+
+  &.dark {
+    background-color: colors.$background-dark-200;
+  }
 }
 
-.copyright-text {
+.ix-footer-copyright {
+  margin-bottom: 32px;
   font-family: 'InnomoticsHafferSQ-Bold';
+
+  &.light {
+    color: colors.$primary-200;
+  }
+
+  &.dark {
+    color: colors.$primary-300;
+  }
+}
+
+%ix-footer-content-base {
+  margin-bottom: 32px;
+  cursor: pointer;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &.light {
+    color: colors.$primary-200;
+
+    &:link,
+    &:visited,
+    &:hover,
+    &:focus,
+    &:active {
+      color: colors.$highlight-light-200;
+    }
+  }
+
+  &.dark {
+    color: colors.$primary-300;
+
+    &:link,
+    &:visited,
+    &:hover,
+    &:focus,
+    &:active {
+      color: colors.$primary-300;
+    }
+  }
+}
+
+.ix-footer-text {
+  @extend %ix-footer-content-base;
+
+  font-family: 'InnomoticsHafferSQ';
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: underline;
+}
+
+.ix-footer-icon {
+  @extend %ix-footer-content-base;
+}
+
+@media screen and (min-width: 800px) {
+  :host {
+    padding: 40px 80px 56px 80px;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .ix-footer-copyright {
+    margin-right: auto;
+    margin-bottom: 0;
+  }
+
+  %ix-footer-content-base {
+    margin-bottom: 0;
+    margin-right: 32px;
+
+    &.light {
+      color: colors.$primary-200;
+
+      &:link,
+      &:visited,
+      &:hover,
+      &:focus,
+      &:active {
+        color: colors.$highlight-light-200;
+      }
+    }
+
+    &.dark {
+      color: colors.$primary-100;
+
+      &:link,
+      &:visited,
+      &:hover,
+      &:focus,
+      &:active {
+        color: colors.$primary-100;
+      }
+    }
+  }
 }
