Fixed hover color.

--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -63,7 +63,7 @@
         background-color: colors.$primary-100;
 
         &:hover:not(.disabled):not(:disabled) {
-          background-color: colors.$background-dark-300;
+          background-color: colors.$secondary-300;
         }
 
         &:active:not(.disabled):not(:disabled) {
