--- a/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
+++ b/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
@@ -21,13 +21,16 @@
     width: 100%;
     border-top: 1px solid colors.$additional-light-300;
 
+    &.last {
+      border-bottom: 1px solid colors.$additional-light-300;
+    }
+
     &.light {
       background-color: colors.$primary-300;
 
       &.hovered {
         background-color: #f0f0f0;
         border-top: 1px solid colors.$transparency-light-200;
-        border-bottom: 1px solid colors.$transparency-light-200;
       }
 
       &:focus {
@@ -41,7 +44,6 @@
       &.hovered {
         background-color: colors.$interaction-dark-hover;
         border-top: 1px solid rgba(225, 240, 0, 1);
-        border-bottom: 1px solid rgba(225, 240, 0, 1);
       }
 
       &:focus {
