--- a/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
+++ b/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
@@ -11,7 +11,8 @@
     &.light {
       color: colors.$text-light-highemphasis;
     }
-    &.dark{
+
+    &.dark {
       color: colors.$text-dark-highemphasis;
     }
   }
@@ -19,13 +20,14 @@
   .accordion {
     text-decoration: none;
     width: 100%;
-    border-top: 1px solid colors.$additional-light-300;
 
     &.last {
+      border-top: 1px solid colors.$additional-light-300;
       border-bottom: 1px solid colors.$additional-light-300;
     }
 
     &.light {
+      border-top: 1px solid colors.$additional-light-300;
       background-color: colors.$primary-300;
 
       &.hovered {
@@ -33,16 +35,22 @@
         border-top: 1px solid colors.$transparency-light-200;
       }
 
-      &:focus {
+      /*&:focus {
         @include componentmixins.focus;
-      }
+      }*/
 
       &.open {
+        background-color: colors.$secondary-100;
+      }
+
+      &.inner {
+        border: 0;
         background-color: colors.$secondary-100;
       }
     }
 
     &.dark {
+      border-top: 1px solid colors.$additional-light-300;
       background-color: colors.$primary-200;
 
       &.hovered {
@@ -50,8 +58,12 @@
         border-top: 1px solid rgba(225, 240, 0, 1);
       }
 
-      &:focus {
+      /*&:focus {
         @include componentmixins.focus;
+      }*/
+
+      &.inner {
+        border: 0;
       }
     }
   }
@@ -65,6 +77,10 @@
     height: 3rem;
     pointer-events: all;
     cursor: pointer;
+
+    &.inner {
+      padding: 0;
+    }
   }
 
   .accordion-header-title {
@@ -84,6 +100,18 @@
     &.dark {
       color: colors.$text-dark-highemphasis;
     }
+
+    &.inner {
+      font-weight: normal;
+      font-size: 12px;
+    }
+
+    &.hide {
+      display: none;
+      max-height: 0;
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
   }
 
   .accordion-content {
@@ -101,6 +129,14 @@
     }
 
     display: block;
+
+    &.inner {
+      padding-left: 24px;
+      padding-right: 24px;
+      padding-bottom: 24px;
+      font-weight: normal;
+      font-size: 12px;
+    }
 
     &.hide {
       display: none;
