--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -58,7 +58,7 @@
 .ix-footer-text {
   @extend %ix-footer-content-base;
 
-  font-family: 'InnomoticsHafferSQ';
+  font-family: 'InnomoticsHafferSQ-Light';
   font-size: 14px;
   font-weight: 400;
   text-decoration: underline;
