adding keyboard func to select

--- a/packages/stencil-lib/src/components/inno-select-item/inno-select-item.scss
+++ b/packages/stencil-lib/src/components/inno-select-item/inno-select-item.scss
@@ -15,6 +15,13 @@
     background-color: colors.$text-dark-lowemphasis;
     color:colors.$text-light-highemphasis;
   }
+
+  &.focused{
+    background-color: colors.$text-dark-lowemphasis;
+    color:colors.$text-light-highemphasis;
+
+  }
+
   &.selected{
     color:colors.$highlight-light-200;
   }
