--- a/packages/test-applications/react-test-app/src/index.css
+++ b/packages/test-applications/react-test-app/src/index.css
@@ -1,7 +1,4 @@
-
-
-@import url("@innomotics/ix-fonts/dist/styles/innomoticsHaffer.css");
-@import url("@innomotics/ix-icons/dist/styles/innomoticsIcons.css");
+@import "@innomotics/ix/styles/innomotics.scss";
 
 :root {
   font-family: 'InnomoticsHafferSQ-Light';
