Accordion style fixes.

--- a/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
+++ b/packages/stencil-lib/src/components/inno-accordion/inno-accordion.scss
@@ -39,12 +39,16 @@
         @include componentmixins.focus;
       }*/
 
-      &.open {
+      &.open.hovered {
         background-color: colors.$secondary-100;
       }
 
       &.inner {
         border: 0;
+        background-color: transparent;
+      }
+
+      &.inner.hovered {
         background-color: colors.$secondary-100;
       }
     }
